style.css
.icons {
    width: 16px;
    height: 16px;
}

.images {
    margin-left: auto;
    margin-right: auto;
    width: 450px;
    display: none;
}

.images:hover {
    display: block;
}

.row {
    width: 500px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

